--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,15 +20,15 @@ jobs:
 
     - name: Restore dependencies
       run: dotnet restore
-      working-directory: ./path/to/your/project
+      working-directory: ././WEB-KhizoOo/WEB-KhizoOo
 
     - name: Build project
       run: dotnet build --configuration Release --no-restore
-      working-directory: ./path/to/your/project
+      working-directory: ././WEB-KhizoOo/WEB-KhizoOo
 
     - name: Publish project
       run: dotnet publish --configuration Release --output ./publish
-      working-directory: ././WEB-KhizoOo/WEB-KhizoOo.csproj
+      working-directory: ././WEB-KhizoOo/WEB-KhizoOo
 
   deploy:
     needs: build
